refactor(api): typage + documentation
